tests/codegen/fail/scalar_value/multiple_named_fields.rs
#[derive(juniper::ScalarValue)]
enum ScalarValue {
    Variant { first: i32, second: u64 },
}

fn main() {}
